force-app/main/default/objects/vlocity_ps__Incident__c/vlocity_ps__Incident__c.object-meta.xml
<CustomObject>
    <description>Incident Management. To create and track incidents and reports for further investigation before a benefits case is created.</description>
    <label>Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>