force-app/main/default/objects/vlocity_ps__Incident__c/fields/Alleged_Victim__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Victim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Victim</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Alleged Victim)</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>