force-app/main/default/objects/vlocity_ps__Incident__c/fields/Children_in_Care__c.field-meta.xml
<CustomField>
    <fullName>Children_in_Care__c</fullName>
    <label>Children in Care</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>