force-app/main/default/objects/vlocity_ps__Incident__c/fields/Escalate_To_Case__c.field-meta.xml
<CustomField>
    <fullName>Escalate_To_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate To Case</label>
    <type>Checkbox</type>
</CustomField>