force-app/main/default/objects/vlocity_ps__Incident__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>