force-app/main/default/objects/vlocity_ps__Incident__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Reporter)</relationshipLabel>
    <relationshipName>Incidents2</relationshipName>
    <type>Lookup</type>
</CustomField>