force-app/main/default/objects/vlocity_ps__Incident__c/fields/Screening_Decision__c.field-meta.xml
<CustomField>
    <fullName>Screening_Decision__c</fullName>
    <label>Screening Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen-In</fullName>
            </value>
            <value>
                <fullName>Screen-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>