force-app/main/default/objects/vlocity_ps__Incident__c/fields/Screening_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Screening_Recommendation__c</fullName>
    <label>Screening Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen-In</fullName>
            </value>
            <value>
                <fullName>Screen-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>