force-app/main/default/objects/vlocity_ps__Incident__c/fields/Status_Images__c.field-meta.xml
<CustomField>
    <fullName>Status_Images__c</fullName>
    <formula>IF(TEXT(vlocity_ps__Status__c)  = &quot;Incoming&quot;, IMAGE(&quot;/resource/Incoming&quot;, &quot;Incoming&quot;), IF(TEXT(vlocity_ps__Status__c) = &quot;Pending&quot;, IMAGE(&quot;/resource/Pending&quot;,&quot;Pending&quot;), IF(TEXT(vlocity_ps__Status__c) = &quot;Returned&quot;, IMAGE(&quot;/resource/Returned&quot;,&quot;Returned&quot;), IMAGE(&quot;/resource/Open&quot;,&quot;Open&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>