force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ApprovalDateTime__c</fullName>
    <formula>IF( ISPICKVAL( vlocity_ps__Status__c , &quot;Approved-Closed&quot; ) , NOW() , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date Time</label>
    <type>DateTime</type>
</CustomField>