force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ApproverId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ApproverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IncidentApprover</relationshipName>
    <type>Lookup</type>
</CustomField>