force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Category__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Services</fullName>
            </value>
            <value>
                <fullName>Child Protection Services</fullName>
                <default>true</default>
                <label>Child Protection Services</label>
            </value>
            <value>
                <fullName>Inter-Jurisdictional</fullName>
            </value>
            <value>
                <fullName>Provider Inquiry</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>