force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__County__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__County__c</fullName>
    <formula>vlocity_ps__JurisdictionId__r.vlocity_ps__County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>