force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__DateClosed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateClosed__c</fullName>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>