force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__DaysLeftOfInvestigation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysLeftOfInvestigation__c</fullName>
    <formula>vlocity_ps__TargetEndDate__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left of Investigation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>