force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Decision__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen In</fullName>
            </value>
            <value>
                <fullName>Screen Out</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Transfer to Ongoing Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>