force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__GeoLocation__c</fullName>
    <label>Geo Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>