force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__IncidentDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentDateTime__c</fullName>
    <description>The date and time on which the incident occurred</description>
    <label>Incident Date/Time</label>
    <type>DateTime</type>
</CustomField>