force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__IncidentNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentNumber__c</fullName>
    <label>Incident Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>