force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__IncidentNumberAutoGenerator__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentNumberAutoGenerator__c</fullName>
    <displayFormat>I-{00000000}</displayFormat>
    <label>Incident Number</label>
    <type>AutoNumber</type>
</CustomField>