force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__JurisdictionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__JurisdictionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jurisdiction</label>
    <referenceTo>vlocity_ps__Jurisdiction__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>IncidentJurisdictions</relationshipName>
    <type>Lookup</type>
</CustomField>