force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__MethodReceived__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MethodReceived__c</fullName>
    <label>Method Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Electronic Portal</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>