force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Narrative__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Narrative__c</fullName>
    <description>Incident report narrative</description>
    <label>Incident Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>