force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__OngoingCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OngoingCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ongoing case associated to Investigation</description>
    <label>Ongoing Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>InvestigationOngoingCases</relationshipName>
    <type>Lookup</type>
</CustomField>