force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Priority__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Critical</fullName>
            </value>
            <value>
                <fullName>2-Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>