force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Recommendation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen In</fullName>
            </value>
            <value>
                <fullName>Screen Out</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Transfer to Ongoing Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>