force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__RecommendationDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RecommendationDateTime__c</fullName>
    <label>Recommendation Date Time</label>
    <type>DateTime</type>
</CustomField>