force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ReportedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReportedDate__c</fullName>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>