force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ReporterName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReporterName__c</fullName>
    <label>Reporter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>