force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ReporterType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReporterType__c</fullName>
    <label>Reporter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Mandated</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>