force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ReportLocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReportLocation__c</fullName>
    <label>Report Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>