force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ResponseTimeRecommendation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ResponseTimeRecommendation__c</fullName>
    <label>Response Time Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>72 Hours</fullName>
            </value>
            <value>
                <fullName>10 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>