force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RiskLevel__c</fullName>
    <description>Risk level score associated with risk assessment.</description>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>