force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__SafetyDecision__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SafetyDecision__c</fullName>
    <description>Safety decision outcome associated with safety assessment.</description>
    <label>Safety Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Safe with plan</fullName>
            </value>
            <value>
                <fullName>Unsafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>