force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__ScreenOutReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ScreenOutReason__c</fullName>
    <label>Screen Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>It is clear from the information received that no child maltreatment occurred.</fullName>
            </value>
            <value>
                <fullName>The allegation did not meet the State’s statutory or agency guidelines, or did not concern child abuse and neglect.</fullName>
            </value>
            <value>
                <fullName>The report did not contain enough information to identify or locate the child and family.</fullName>
            </value>
            <value>
                <fullName>The child in the referral was the responsibility of another agency or jurisdiction, such as a military installation or a Tribe.</fullName>
            </value>
            <value>
                <fullName>The alleged victim is not a child.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>