force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Stage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>