force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__State__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>