force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved-Closed</fullName>
            </value>
            <value>
                <fullName>Rejected-Closed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unfounded-Closed</fullName>
            </value>
            <value>
                <fullName>Founded-Transfer to Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>