force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Street__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Street__c</fullName>
    <label>Street</label>
    <length>30</length>
    <type>Text</type>
</CustomField>