force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SupervisorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Supervisor</description>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IncidentSupervisors</relationshipName>
    <type>Lookup</type>
</CustomField>