force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__TargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TargetEndDate__c</fullName>
    <formula>DATEVALUE(CreatedDate) + 30</formula>
    <label>Target End Date</label>
    <type>Date</type>
</CustomField>