force-app/main/default/objects/vlocity_ps__Incident__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Family Assessment</fullName>
            </value>
            <value>
                <fullName>CPS Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>