force-app/main/default/objects/vlocity_ps__Incident__c/recordTypes/vlocity_ps__Incident.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Incident</fullName>
    <active>true</active>
    <label>Incident</label>
</RecordType>