force-app/main/default/objects/vlocity_ps__Incident__c/recordTypes/vlocity_ps__Investigation.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Investigation</fullName>
    <active>true</active>
    <label>Investigation</label>
</RecordType>