force-app/main/default/objects/vlocity_ps__Incident__c/validationRules/vlocity_ps__Incident_Date_Current_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Incident_Date_Current_Date</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__IncidentDateTime__c  &gt;  NOW()</errorConditionFormula>
    <errorDisplayField>vlocity_ps__IncidentDateTime__c</errorDisplayField>
    <errorMessage>Incident date cannot be greater than current date</errorMessage>
</ValidationRule>