force-app/main/default/objects/vlocity_ps__Incident__c/validationRules/vlocity_ps__Incident_Date_Reported_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Incident_Date_Reported_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(vlocity_ps__IncidentDateTime__c) &gt; vlocity_ps__ReportedDate__c</errorConditionFormula>
    <errorMessage>Incident date cannot be greater than Reported date</errorMessage>
</ValidationRule>