force-app/main/default/objects/vlocity_ps__Incident__c/validationRules/vlocity_ps__Incident_Name_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Incident_Name_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Incident Name cannot be empty</errorMessage>
</ValidationRule>