force-app/main/default/objects/vlocity_ps__Incident__c/validationRules/vlocity_ps__Reported_date_Current_date.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Reported_date_Current_date</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__ReportedDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>vlocity_ps__ReportedDate__c</errorDisplayField>
    <errorMessage>Reported date cannot be greater than current date</errorMessage>
</ValidationRule>