force-app/main/default/objects/vlocity_ps__Incident__c/listViews/Intake.listView-meta.xml
<ListView>
    <fullName>Intake</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__Type__c</columns>
    <columns>vlocity_ps__ReportedDate__c</columns>
    <columns>Status_Images__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>vlocity_ps__Status__c</field>
        <operation>equals</operation>
        <value>Open,Incoming,Returned,Pending</value>
    </filters>
    <label>Intake</label>
</ListView>