force-app/main/default/objects/vlocity_ps__Incident__c/listViews/Priority_Incidents.listView-meta.xml
<ListView>
    <fullName>Priority_Incidents</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>vlocity_ps__Priority__c</columns>
    <columns>vlocity_ps__Stage__c</columns>
    <columns>vlocity_ps__ReporterName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Priority Incidents</label>
</ListView>