force-app/main/default/objects/vlocity_ps__Incident__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>vlocity_ps__IncidentNumber__c</columns>
    <columns>vlocity_ps__IncidentNumberAutoGenerator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>